Revise contact details and approach description

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
         </div>
 
         <div class="small" id="approach">
-          Approach: quick discovery → lightweight plan → execute in small, testable increments → handoff with docs.
+          <p>Approach: quick discovery to understand the real problem → a lightweight, opinionated plan grounded in practical constraints → execution in small, testable increments with constant validation → clear handoff with diagrams, documentation, and next-step recommendations so teams can move forward confidently.</p>
         </div>
       </div>
 
@@ -574,21 +574,24 @@
         <div class="small" id="contact">
           Contact:
           <div class="contact-wrap">
-            <div class="contact-grid-2">
+            <div class="contact-grid-1">
 
               <!-- Sean -->
               <div class="contact-card">
                 <div class="contact-head">
                   <div class="contact-title">
-                    <span class="beacon" aria-hidden="true"></span>
+                    <span class="beacon orange" aria-hidden="true"></span>
                     <span>Sean Sheldon</span>
                   </div>
-                  <a class="contact-cta" href="mailto:sean@sheldonglobal.org" aria-label="Email Sean">
-                    ✉️ <span>Email</span>
-                  </a>
                 </div>
-
                 <div class="contact-list">
+                  <div class="contact-row">
+                    <div class="contact-ico" aria-hidden="true">📞</div>
+                    <div class="contact-text">
+                      <div class="label">Phone</div>
+                      <a href="tel:+12512790777">251-279-0777</a>
+                    </div>
+                  </div>
                   <div class="contact-row">
                     <div class="contact-ico" aria-hidden="true">📧</div>
                     <div class="contact-text">
@@ -598,37 +601,13 @@
                   </div>
 
                   <div class="contact-row">
-                    <div class="contact-ico" aria-hidden="true">📞</div>
-                    <div class="contact-text">
-                      <div class="label">Phone</div>
-                      <a href="tel:+12512790777">251-279-0777</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Office -->
-              <div class="contact-card">
-                <div class="contact-head">
-                  <div class="contact-title">
-                    <span class="beacon orange" aria-hidden="true"></span>
-                    <span>Office</span>
-                  </div>
-                  <a class="contact-cta" href="mailto:info@sheldonglobal.org" aria-label="Email Office">
-                    ✉️ <span>Email</span>
-                  </a>
-                </div>
-
-                <div class="contact-list">
-                  <div class="contact-row">
                     <div class="contact-ico" aria-hidden="true">🧾</div>
                     <div class="contact-text">
                       <div class="label">General inbox</div>
                       <a href="mailto:info@sheldonglobal.org">info@sheldonglobal.org</a>
                     </div>
                   </div>
-
-                  <div class="contact-row">
+                   <div class="contact-row">
                     <div class="contact-ico" aria-hidden="true">🕒</div>
                     <div class="contact-text">
                       <div class="label">Response</div>
@@ -637,9 +616,8 @@
                   </div>
                 </div>
               </div>
-
-            </div>
-          </div>
+                </div>
+              </div>
         </div>
 
       </aside>
@@ -647,7 +625,7 @@
 
     <footer>
       <div>© <span id="y"></span> Sheldon Global</div>
-      <div>Healthcare IT • Integration • Interoperability • Data</div>
+      <div>Healthcare IT • Integration • Interoperability</div>
     </footer>
   </div>
 
