Refactor approach section in index.html

--- a/index.html
+++ b/index.html
@@ -528,9 +528,11 @@
           </div>
         </div>
 
-        <div class="small" id="approach">
-          <p>Approach: quick discovery to understand the real problem → a lightweight, opinionated plan grounded in practical constraints → execution in small, testable increments with constant validation → clear handoff with diagrams, documentation, and next-step recommendations so teams can move forward confidently.</p>
-        </div>
+          <div class="small" id="approach">
+            <div class="tile">
+                <p><strong style="color: white;">Approach:</strong> quick discovery to understand the real problem → a lightweight, opinionated plan grounded in practical constraints → execution in small, testable increments with constant validation → clear handoff with diagrams, documentation, and next-step recommendations so teams can move forward confidently.</p>
+            </div> 
+          </div>
       </div>
 
       <aside class="panel side">
