--- a/lab.html
+++ b/lab.html
@@ -1,3 +1,9 @@
+<!-- =========================
+  FILE: lab.html (UPDATED)
+  - Matches index.html nav glow/underline style
+  - Uses same header grid layout + logo sizing
+  - Keeps your Lab content + button behavior
+========================= -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -18,6 +24,9 @@
       --radius:18px;
       --max:900px;
       --font:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
+
+      --glowA: 0 0 0 1px rgba(255,101,0,.18), 0 0 28px rgba(255,101,0,.16);
+      --glowB: 0 0 0 1px rgba(92,225,212,.18), 0 0 28px rgba(92,225,212,.14);
     }
     *{box-sizing:border-box;}
     body{
@@ -33,74 +42,132 @@
     a{color:inherit;text-decoration:none;}
     .wrap{max-width:var(--max);margin:0 auto;padding:26px 18px 60px;}
 
-    /* ===== BRAND HEADER (BIG LOGO) ===== */
+    /* ===== HEADER (match index.html vibe) ===== */
     .site-header{
-      display:flex;
-      justify-content:space-between;
-      align-items:flex-start;
-      padding:30px 6px 40px;
-      gap:20px;
+      display:grid;
+      grid-template-columns:auto 1fr;
+      grid-template-rows:auto auto;
+      column-gap:22px;
+      padding:26px 6px 18px;
     }
+
     .brand-block{
+      grid-column:1;
+      grid-row:1 / span 2;
       display:flex;
       flex-direction:column;
       align-items:flex-start;
-      gap:16px;
+      gap:12px;
       min-width:260px;
     }
+
     .logo-hero{
-      height:120px;
+      height:140px;
       width:auto;
-      max-width:680px;
+      max-width:820px;
       object-fit:contain;
       filter: drop-shadow(0 20px 60px rgba(0,0,0,.55));
     }
+
     .tagline-row{
       display:flex;
-      gap:12px;
+      gap:10px;
       flex-wrap:wrap;
       margin-left:2px;
     }
     .pill{
-      border:1px solid rgba(255,255,255,.18);
-      background:rgba(0,0,0,.25);
-      padding:8px 14px;
+      border:1px solid rgba(255,255,255,.14);
+      background:rgba(0,0,0,.20);
+      padding:7px 12px;
       border-radius:999px;
-      font-size:13px;
-      color:var(--muted);
-      letter-spacing:.3px;
+      font-size:12px;
+      color:rgba(255,255,255,.72);
+      letter-spacing:.25px;
       line-height:1;
+      box-shadow:0 0 0 1px rgba(255,255,255,.03), 0 0 18px rgba(92,225,212,.08);
     }
 
     .top-nav{
+      grid-column:2;
+      grid-row:2;
       display:flex;
-      gap:14px;
+      gap:18px;
       flex-wrap:wrap;
       justify-content:flex-end;
-      padding-top:12px;
+      align-items:center;
+      align-self:end;
+      padding:0;
+      margin:0;
     }
+
     .top-nav a{
-      font-size:13px;
-      color:var(--muted);
-      padding:8px 10px;
-      border-radius:10px;
+      position:relative;
+      font-size:14px;
+      color:rgba(255,255,255,.84);
+      padding:8px 2px;
+      letter-spacing:.2px;
+      text-shadow:0 0 18px rgba(255,255,255,.06);
+      transition:filter .15s ease, transform .15s ease, color .15s ease;
     }
+
+    .top-nav a::before{
+      content:"";
+      position:absolute;
+      left:-10px; right:-10px;
+      top:50%;
+      height:26px;
+      transform:translateY(-50%);
+      border-radius:999px;
+      background:radial-gradient(60% 90% at 50% 50%, rgba(92,225,212,.18), rgba(92,225,212,0) 70%);
+      opacity:0;
+      filter:blur(.3px);
+      transition:opacity .15s ease;
+      pointer-events:none;
+    }
+
+    .top-nav a::after{
+      content:"";
+      position:absolute;
+      left:-2px; right:-2px; bottom:2px;
+      height:2px;
+      border-radius:99px;
+      background:linear-gradient(90deg,
+        rgba(92,225,212,0),
+        rgba(92,225,212,.95),
+        rgba(255,101,0,.85),
+        rgba(255,101,0,0)
+      );
+      opacity:.30;
+      filter:drop-shadow(0 0 10px rgba(92,225,212,.18));
+      transform:translateY(2px);
+      transition:opacity .15s ease, transform .15s ease, filter .15s ease;
+      pointer-events:none;
+    }
+
     .top-nav a:hover{
-      color:var(--text);
-      background:rgba(255,255,255,.06);
+      transform:translateY(-1px);
+      filter:brightness(1.08);
+      color:rgba(255,255,255,.95);
+    }
+    .top-nav a:hover::before{opacity:1;}
+    .top-nav a:hover::after{
+      opacity:1;
+      transform:translateY(0);
+      filter:
+        drop-shadow(0 0 14px rgba(92,225,212,.22))
+        drop-shadow(0 0 18px rgba(255,101,0,.18));
     }
 
     @media (max-width:900px){
       .site-header{
-        flex-direction:column;
-        align-items:flex-start;
-        padding:22px 6px 24px;
+        grid-template-columns:1fr;
+        grid-template-rows:auto auto;
+        row-gap:10px;
+        padding:22px 6px 18px;
       }
-      .logo-hero{
-        height:96px;
-        max-width:100%;
-      }
-      .top-nav{padding-top:4px;}
+      .brand-block{grid-column:1;grid-row:1;min-width:0;}
+      .logo-hero{height:112px;max-width:100%;}
+      .top-nav{grid-column:1;grid-row:2;justify-content:flex-start;gap:16px;}
     }
 
     .panel{
@@ -128,7 +195,10 @@
       color:#000;
       cursor:pointer;
       user-select:none;
+      box-shadow:0 12px 40px rgba(255,101,0,.12);
+      transition:filter .15s ease, transform .15s ease;
     }
+    .btn:hover{filter:brightness(1.05);transform:translateY(-1px);}
 
     .note{
       margin-top:14px;
@@ -169,7 +239,7 @@
         </div>
       </div>
 
-      <nav class="top-nav">
+      <nav class="top-nav" aria-label="Primary navigation">
         <a href="index.html">Home</a>
         <a href="index.html#services">Services</a>
         <a href="index.html#contact">Contact</a>
