--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
       font-family:var(--font);
       color:var(--text);
       background:
-        radial-gradient(1000px 520px at 15% 12%, rgba(255,101,0,.20), transparent 60%),
-        radial-gradient(1000px 520px at 85% 18%, rgba(92,225,212,.18), transparent 60%),
-        radial-gradient(900px 620px at 50% 105%, rgba(255,255,255,.06), transparent 55%),
+        radial-gradient(1200px 700px at 50% -10%, rgba(255,255,255,.04), transparent 60%),
         linear-gradient(180deg, var(--bg), var(--bg2));
       min-height:100vh;
       overflow-x:hidden;
@@ -185,22 +183,16 @@
       align-items:center;
     }
 
-    /* fade at bottom of each section */
-    .section::after{
-      content:"";
-      position:absolute;
-      left:0;right:0;bottom:-1px;
-      height:120px;
-      background:linear-gradient(180deg, rgba(7,13,24,0), rgba(7,13,24,.85), rgba(7,13,24,1));
-      pointer-events:none;
-    }
+    .section-inner{width:100%;}
 
-    /* subtle section-to-section shift */
-    .section.alt{
-      background:
-        radial-gradient(1000px 540px at 90% 20%, rgba(92,225,212,.12), transparent 60%),
-        radial-gradient(900px 520px at 10% 25%, rgba(255,101,0,.10), transparent 62%);
+    .reveal{
+      opacity:0;
+      transform:translateY(14px);
+      filter:saturate(.98);
+      transition:opacity .65s ease, transform .65s ease, filter .65s ease;
+      will-change:opacity, transform;
     }
+    .reveal.in{opacity:1;transform:translateY(0);filter:saturate(1);} 
 
     .section-inner{width:100%;}
 
@@ -213,22 +205,8 @@
     }
     .reveal.in{opacity:1;transform:translateY(0);filter:saturate(1);}
 
-    .eyebrow{
-      display:inline-flex;
-      align-items:center;
-      gap:10px;
-      padding:8px 12px;
-      border-radius:999px;
-      border:1px solid rgba(255,255,255,.12);
-      background:rgba(0,0,0,.18);
-      color:rgba(255,255,255,.70);
-      font-size:12px;
-      letter-spacing:.25px;
-      box-shadow: 0 0 0 1px rgba(255,255,255,.03), 0 0 22px rgba(92,225,212,.08);
-    }
-    .eyebrow .dot{width:8px;height:8px;border-radius:99px;background:rgba(92,225,212,.95);box-shadow:0 0 0 4px rgba(92,225,212,.14);}
-
-    .hero-grid{display:grid;grid-template-columns:1.1fr .9fr;gap:22px;align-items:stretch;}
+    
+    .hero-grid{display:grid;grid-template-columns:1fr;gap:22px;align-items:stretch;}
 
     .hero-logo{
       height:140px;
@@ -273,7 +251,7 @@
     .btn:hover{filter:brightness(1.05);transform:translateY(-1px);}
 
     .panel{
-      background:var(--card);
+      background:rgba(10,16,28,.78);
       border:1px solid var(--border);
       border-radius:var(--radius);
       box-shadow:var(--shadow);
@@ -288,7 +266,7 @@
 
     .grid-3{display:grid;grid-template-columns:repeat(3, 1fr);gap:16px;}
     .tile{
-      background:rgba(0,0,0,.14);
+      background:rgba(10,16,28,.72);
       border:1px solid rgba(255,255,255,.10);
       border-radius:18px;
       padding:18px;
@@ -308,10 +286,7 @@
     .callout{
       border-radius:18px;
       border:1px solid rgba(255,255,255,.10);
-      background:
-        radial-gradient(520px 180px at 12% 24%, rgba(92,225,212,.12), transparent 55%),
-        radial-gradient(520px 180px at 90% 30%, rgba(255,101,0,.12), transparent 55%),
-        rgba(0,0,0,.14);
+      background:rgba(10,16,28,.70);
       padding:18px;
     }
     .callout h4{margin:0 0 8px;font-size:14px;color:rgba(255,255,255,.82);}
@@ -323,7 +298,7 @@
     .step{
       border-radius:18px;
       border:1px solid rgba(255,255,255,.10);
-      background:rgba(0,0,0,.14);
+      background:rgba(10,16,28,.72);
       padding:18px;
       min-height:150px;
     }
@@ -336,14 +311,14 @@
 
     /* Contact */
     .contact-grid{display:grid;grid-template-columns:1fr 1fr;gap:16px;margin-top:22px;}
-    .contact-card{border-radius:20px;border:1px solid rgba(255,255,255,.12);background:rgba(0,0,0,.14);box-shadow:var(--shadow);backdrop-filter:blur(12px);padding:18px;}
+    .contact-card{border-radius:20px;border:1px solid rgba(255,255,255,.12);background:rgba(10,16,28,.74);box-shadow:var(--shadow);backdrop-filter:blur(12px);padding:18px;}
     .contact-head{display:flex;align-items:center;justify-content:space-between;gap:10px;margin-bottom:12px;}
     .contact-title{display:flex;align-items:center;gap:10px;font-size:13px;color:rgba(255,255,255,.86);}
     .beacon{width:10px;height:10px;border-radius:99px;background:linear-gradient(180deg, rgba(92,225,212,1), rgba(92,225,212,.45));box-shadow:0 0 0 5px rgba(92,225,212,.10), 0 0 18px rgba(92,225,212,.22);}
     .beacon.orange{background:linear-gradient(180deg, rgba(255,101,0,1), rgba(255,101,0,.45));box-shadow:0 0 0 5px rgba(255,101,0,.10), 0 0 18px rgba(255,101,0,.20);}
 
     .contact-list{display:grid;gap:10px;}
-    .contact-row{display:flex;align-items:center;gap:12px;padding:12px;border-radius:16px;border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.14);transition:transform .15s ease, filter .15s ease, border-color .15s ease;}
+    .contact-row{display:flex;align-items:center;gap:12px;padding:12px;border-radius:16px;border:1px solid rgba(255,255,255,.10);background:rgba(10,16,28,.72);transition:transform .15s ease, filter .15s ease, border-color .15s ease;}
     .contact-row:hover{transform:translateY(-1px);filter:brightness(1.04);border-color:rgba(92,225,212,.20);}
     .ico{width:36px;height:36px;border-radius:14px;display:grid;place-items:center;background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.10);box-shadow:0 0 18px rgba(255,255,255,.06);flex:0 0 auto;font-size:16px;}
     .ctext{display:grid;gap:3px;min-width:0;}
@@ -385,7 +360,7 @@
         <a href="#services">Services</a>
         <a href="#deliverables">Deliverables</a>
         <a href="#approach">Approach</a>
-        <a href="lab.html">Lab</a>
+        <a href="./lab.html">Lab</a>
         <a href="#contact">Contact</a>
         <a class="consult-pill" href="#contact">Request a consult</a>
       </nav>
@@ -399,7 +374,6 @@
         <div>
           <img class="hero-logo" src="assets/sheldon_global_logo.png" alt="Sheldon Global logo" />
 
-          <div class="eyebrow"><span class="dot" aria-hidden="true"></span> Healthcare IT consulting</div>
           <h1>Build reliable platforms for care delivery — without the chaos.</h1>
           <p class="subhead">
             Sheldon Global helps health systems and enterprise teams modernize architecture, streamline interoperability,
@@ -407,15 +381,22 @@
             and systems you can trust in production.
           </p>
 
-          <div style="margin-top:22px;display:flex;gap:12px;flex-wrap:wrap;align-items:center;">
-            <a class="btn" href="#contact">Request a consult</a>
-            <div style="color:rgba(255,255,255,.60);font-size:13px;line-height:1.5;">
-              Prefer email? <a href="mailto:info@sheldonglobal.org" style="color:rgba(92,225,212,.92)">info@sheldonglobal.org</a>
-            </div>
+          </div>
+
+          <div class="panel" style="margin-top:26px;">
+            <h3 style="margin:0 0 10px;font-size:14px;color:rgba(255,255,255,.72);letter-spacing:.2px;">What teams usually want</h3>
+            <p style="margin:0;color:rgba(255,255,255,.90);font-size:18px;line-height:1.45;">Clear direction, fewer integration surprises, and predictable delivery across environments.</p>
+            <ul style="margin:14px 0 0;padding:0 0 0 18px;color:rgba(255,255,255,.72);">
+              <li style="margin:8px 0;line-height:1.55;">Reduce interface fragility and “mystery” failures</li>
+              <li style="margin:8px 0;line-height:1.55;">Make data trustworthy for analytics and clinical workflows</li>
+              <li style="margin:8px 0;line-height:1.55;">Improve throughput with automation and repeatable runbooks</li>
+              <li style="margin:8px 0;line-height:1.55;">Harden delivery with least-privilege and audit-friendly patterns</li>
+            </ul>
           </div>
         </div>
 
-        <aside class="panel sidecard">
+        <!-- removed hero side card; moved content below hero headline -->
+        <div style="display:none">
           <h3>What teams usually want</h3>
           <p class="big">Clear direction, fewer integration surprises, and predictable delivery across environments.</p>
           <ul class="bul">
@@ -424,13 +405,13 @@
             <li>Improve throughput with automation and repeatable runbooks</li>
             <li>Harden delivery with least-privilege and audit-friendly patterns</li>
           </ul>
-        </aside>
+        </div>
       </div>
     </div>
   </section>
 
   <!-- SERVICES -->
-  <section class="section alt" id="services">
+  <section class="section" id="services">
     <div class="wrap section-inner">
       <div class="reveal">
         <h2 class="section-title">Services built for healthcare reality.</h2>
@@ -522,7 +503,7 @@
   </section>
 
   <!-- APPROACH -->
-  <section class="section alt" id="approach">
+  <section class="section" id="approach">
     <div class="wrap section-inner">
       <div class="reveal">
         <h2 class="section-title">A simple, repeatable approach.</h2>
